# SIK2

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  client.cpp  connection_manager.cpp  connection_manager.h  docker-compose.yaml  local_client.cpp  local_client.h  local_interface.cpp  local_interface.h  local_message.cpp  local_message.h  local_server.cpp  local_server.h  main.cpp  net_interface.cpp  net_interface.h  parameters.cpp  parameters.h  proxy_manager.cpp  proxy_manager.h  radio-client  radio-proxy  server.cpp  shoutcast_request.cpp  shoutcast_request.h
client/: client.cpp  client.h  client_interface.cpp  client_manager.cpp  client_parameters.cpp  telnet_interfaces.cpp  user_interface.cpp
common/: common.cpp  common.h  local_interface.cpp  local_message.cpp  parameters.cpp
server/: radio_interface.cpp  radio_manager.cpp  server.cpp  server.h  server_interface.cpp  server_manager.cpp  server_parameters.cpp  shoutcast_request.cpp
